--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,9 +232,10 @@ img{
   color: var(--first-color);
 }
 .home__img{
+  position: absolute;
   right: 0;
   bottom: 0;
-  width: 295px; 
+  width: 395px; 
 }
 
 .home__blob{
