--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,15 +232,14 @@ img{
   color: var(--first-color);
 }
 .home__img{
-  /* position: absolute; */
+  position: absolute;
   right: 0;
   bottom: 0;
-  width: 295px; 
+  width: 495px; 
 }
 
 .home__blob{
-  position: relative;
-  width: 250px;
+  width: 300px;
   fill: var(--first-color);
 }
 
